--- a/views/index.html
+++ b/views/index.html
@@ -9,11 +9,12 @@
     <title>Document</title>
   </head>
   <body>
-    <section>
+    <header>
       <h1>To Do List</h1>
-
+    </header>
+  
+    <section>
       <div class="add-task-container">
-
         <div class="title-container">
           <label for="title">Title: </label>
           <input type="text" placeholder="task name" id="title" />
@@ -35,7 +36,7 @@
 
       <div class="task-fields">
           <p>Task Name</p>
-          <p>Task Date</p>
+          <p class="task-field-date">Task Date</p>
           <p>Delete</p>
           <p>Completed</p>
       </div>
@@ -49,5 +50,6 @@
         </div>
       </template>
     </section>
+
   </body>
 </html>
